Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB

        Public Declare Function BTIEBR_ListInit Lib "BTIEBR.DLL" Alias "_BTIEBR_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ListNextRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListNextRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_ListNextWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListNextWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_ListPostRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPostRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_ListPostWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPostWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_ListPreRd Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPreRd@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_ListPreWr Lib "BTIEBR.DLL" Alias "_BTIEBR_ListPreWr@12" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_ListStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_ListStatus@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ModeIsBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsBC@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsMon Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsMon@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsNotBC Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotBC@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsNotMon Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotMon@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsNotPlay Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotPlay@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsNotRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotRT@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsNotSerial Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsNotSerial@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsPlay Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsPlay@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsRT Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsRT@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_ModeIsSerial Lib "BTIEBR.DLL" Alias "_BTIEBR_ModeIsSerial@4" (ByVal chanflag As UInt16) As Int32
        Public Declare Function BTIEBR_MonConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MonConfigEx@20" (ByVal configval As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MonFilterSAEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MonFilterSAEx@28" (ByVal rtlink As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MsgCheck Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_MsgCommRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCommRd@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgCommWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCommWr@12" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgConfig@8" (ByVal configval As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgConfigEx@12" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgCWDLinkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDLinkRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_MsgCWDLinkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDLinkWr@12" (ByVal cwdlink As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgCWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_MsgCWDWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgCWDWr@12" (ByVal cwd As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgErrorRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgErrorRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_MsgErrorWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgErrorWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgFlagRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFlagRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_MsgFlagWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFlagWr@12" (ByVal msgflag As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgIsAccessed Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MsgOptRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTIEBR_MsgOptWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgReset Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgResetEx Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgResetEx@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgSWDLinkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSWDLinkRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_MsgSWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSWDRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_PlayClear Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayClear@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayConfigEx@20" (ByVal configval As UInt32, ByVal playcount As UInt32, ByVal rtlinkmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayCounterWr Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayCounterWr@12" (ByVal totalcount As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_PlayStatusEx Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayStatusEx@12" (ByRef totalcount As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayWrEx@16" (ByVal buf As UInt16(), ByVal bufcount As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_RTConfigEx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTConfigEx@16" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTConfigExx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTConfigExx@16" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTCreateListEx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateListEx@40" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTCreateListExx Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateListExx@40" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTResponseTimeRd Lib "BTIEBR.DLL" Alias "_BTIEBR_RTResponseTimeRd@16" (ByRef timeval As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTResponseTimeWr Lib "BTIEBR.DLL" Alias "_BTIEBR_RTResponseTimeWr@16" (ByVal timeval As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_RTStatus@12" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_SABlkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_SABlkWr@16" (ByVal rtlink As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SABlkWrEx Lib "BTIEBR.DLL" Alias "_BTIEBR_SABlkWrEx@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedBuild Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedBuild@20" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal freq As Int32(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedBuildEx Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedBuildEx@32" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal freq As Int32(), ByVal period As Int32(), ByVal buf As IntPtr(), ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedBuildExx Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedBuildExx@32" (ByVal frametime As UInt32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal period As Int32(), ByVal buf As IntPtr(), ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedCalc Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedCalc@12" (ByRef msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_SchedDisplay Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedDisplay@8" (ByVal nummsgs As UInt32, ByRef count As UInt32)
        Public Declare Sub BTIEBR_SchedHook Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedHook@8" (ByVal index As Int32, ByVal ptr As IntPtr)
        Public Declare Function BTIEBR_SchedInsEnd Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedInsEnd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedInsMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedInsMsg@16" (ByVal index As UInt32, ByRef msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedInsStart Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedInsStart@16" (ByVal frametime As UInt32, ByVal count As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_SchedMaxval Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedMaxval@8" (ByVal arrayval As UInt32(), ByVal arrayvalcount As UInt32) As UInt32
        Public Declare Function BTIEBR_SchedMinval Lib "BTIEBR.DLL" Alias "_BTIEBR_SchedMinval@8" (ByVal arrayval As UInt32(), ByVal arrayvalcount As UInt32) As UInt32
        Public Declare Sub BTIEBR_SchedPrint Lib "BTIEBR.DLL" Alias "" (ByVal ParamArray list() As String)
